# JUSL_Bkg

./: README.md
B1_JUSL_Gaisser/: CMakeLists.txt  exampleB1.cc  exampleB1.cc~  run1.mac  run1.mac~
B1_JUSL_Gaisser/include/: B1ActionInitialization.hh  B1ActionInitialization.hh~  B1DetectorConstruction.hh  B1EventAction.hh  B1EventAction.hh~  B1PrimaryGeneratorAction.hh  B1PrimaryGeneratorAction.hh~  B1RunAction.hh  B1RunAction.hh~  B1SteppingAction.hh  B1SteppingAction.hh~
B1_JUSL_Gaisser/src/: B1ActionInitialization.cc  B1ActionInitialization.cc~  B1DetectorConstruction.cc  B1DetectorConstruction.cc~  B1EventAction.cc  B1EventAction.cc~  B1PhysicsList.cc~  B1PrimaryGeneratorAction.cc  B1PrimaryGeneratorAction.cc~  B1RunAction.cc  B1RunAction.cc~  B1SteppingAction.cc  B1SteppingAction.cc~
RadNeutDet/: CMakeLists.txt  DMX.cc  G4History.macro  alpha.root  dmx.root  gamma.mac  gamma100.mac  gamma1000.mac  gamma20.mac  initInter.mac  neutron.mac  neutron100.mac  neutron1000.mac  vis.mac
RadNeutDet/include/: #DMXSteppingAction.hh#  DMXActionInitialization.hh  DMXDetectorConstruction.hh  DMXDetectorMaterial.ihh  DMXEventAction.hh  DMXParticleSource.hh~  DMXPhysicsList.hh  DMXPrimaryGeneratorAction.hh  DMXRunAction.hh  DMXStackingAction.hh  DMXSteppingAction.hh
RadNeutDet/src/: DMXActionInitialization.cc  DMXDetectorConstruction.cc  DMXDetectorMaterial.icc  DMXDetectorRoom.icc  DMXDetectorRoomLimits.icc  DMXEventAction.cc  DMXMaxTimeCuts.cc  DMXMinEkineCuts.cc  DMXPhysicsList.cc  DMXPrimaryGeneratorAction.cc  DMXRunAction.cc  DMXSpecialCuts.cc  DMXStackingAction.cc  DMXSteppingAction.cc
